Head info changes + layout conponent

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@ a {
   box-sizing: border-box;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -28,3 +29,4 @@ a {
     background: black;
   }
 }
+*/
