--- a/layout/Navbar/styles.module.css
+++ b/layout/Navbar/styles.module.css
@@ -1,21 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
+/* Setup */
 .navbar {
-  @apply p-4 flex flex-row
+  @apply py-2 flex flex-row justify-between
 }
 
+/* Logo */
+
 .logo {
-  @apply flex flex-row
+  @apply flex flex-row ml-16
 }
 
 .rosewrightdev {
   font-family: 'Poppins';
-  @apply font-medium tracking-tight
+  @apply font-semibold tracking-tight my-1 text-lg text-black-mid
 }
 
 .rosewrightdevIcon {
   @apply m-1 text-red
 }
 
+/* NarbarItem */
+
+.firstnarbaritem {
+  @apply my-auto ml-auto text-sm font-light
+}
+
+.narbaritem {
+  @apply my-auto m-[14px] text-sm font-light
+}
+
+.narbaritems {
+  @apply ml-7 flex flex-row
+}
+
+/* Decoration */
 .linebreak {
   @apply border-black-light
 }
