--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  @apply text-black
+  @apply text-black-900
 }
 
 a {
@@ -35,7 +35,7 @@ a {
   }
   
   ::-webkit-scrollbar-thumb {
-    @apply bg-gray-dark;
+    @apply bg-gray-900;
     border-radius: 1000px;
     border: 0.25vw solid white;
   }
