--- a/layout/Thesis/styles.module.css
+++ b/layout/Thesis/styles.module.css
@@ -15,7 +15,7 @@
 }
 
 .textcontainer {   
-    @apply  w-[50vw] my-auto
+    @apply  w-[50vw] my-auto p-7 rounded-2xl border-gray-900 m-5 shadow-xl 
 }
 
 .header {
@@ -49,7 +49,7 @@
 }
 
 .button {
-    @apply border-2 p-3 mt-4 rounded-lg shadow-lg border-black-900  hover:bg-blue transition-all hover:text-white
+    @apply border-[1px] p-4 mt-4 rounded-lg shadow-lg border-black-500  hover:bg-black-900 transition-all hover:text-white font-medium
 }
 
 @media only screen and (max-width: 1200px) {
@@ -57,7 +57,7 @@
         @apply flex flex-col-reverse
     }
     .textcontainer {   
-        @apply  w-[100vw] mx-auto p-8
+        @apply  w-[100vw] mx-auto p-8 border-0
     }
     .image {
         @apply w-[100vw] m-1
