--- a/layout/Thesis/styles.module.css
+++ b/layout/Thesis/styles.module.css
@@ -15,7 +15,7 @@
 }
 
 .textcontainer {   
-    @apply  w-[50vw] my-auto p-7 rounded-2xl border-gray-900 ml-16 shadow-xl 
+    @apply  w-[50vw] my-8 p-7 rounded-2xl border-gray-900 m-16 shadow-xl 
 }
 
 
