--- a/layout/Body_1/styles.module.css
+++ b/layout/Body_1/styles.module.css
@@ -1,24 +1,65 @@
+.container {
+    @apply h-auto pb-0 select-none
+}
 
-.svgcontainer{
-    @apply p-10 flex
+.image {
+    @apply mx-16 my-8 w-[50vw]
 }
 
 .flexbox {
-    @apply flex flex-col
+    @apply flex flex-row
 }
 
-.header {
-@apply text-black-900
+.imageSrc {
+    @apply p-0 w-[500px]
+}
+
+.textcontainer {
+    @apply  w-[50vw] my-8 p-7 rounded-2xl m-16
+}
+
+
+
+.pink {
+    background: linear-gradient(to right, #FF6884 0%, #cc536a 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.blue {
+    background: linear-gradient(to left, #6c63ff 0%, #564fcc 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.under {
+    margin: 0px;
+    border-bottom: 3px solid;
+    background: transparent;
+    border-image: linear-gradient(45deg, #FF6884, #6c63ff) 1;
+    border-radius: 5px
+}
+
+.text {
+    @apply text-5xl font-semibold 
+}
+
+.button {
+    @apply border-[1px] p-4 mt-4 rounded-xl shadow-lg border-black-500  hover:bg-black-900 transition-all hover:text-white font-medium
 }
 
 @media only screen and (max-width: 1200px) {
-    .header{
-        @apply text-3xl
-    }
     .flexbox {
-        @apply flex flex-col
+        @apply flex flex-col-reverse
     }
-    .techimage {
-        @apply min-w-[80vw] m-3
+    .textcontainer {   
+        @apply  w-auto mx-auto p-8 border-0 m-5
+    }
+    .image {
+        @apply w-[100vw] m-0
+    }
+    .text {
+        @apply text-2xl
     }
 }
+
