--- a/layout/Body_1/styles.module.css
+++ b/layout/Body_1/styles.module.css
@@ -24,28 +24,43 @@
   }
   
   .tabs button:disabled {
-    border-bottom: 1px solid;
+    border-top: 2px solid #a0a0a0;
+    border-right: 2px solid #a0a0a0;
+    border-left: 2px solid #a0a0a0;
+    border-bottom: 2px solid transparent;
+
   }
 
   .tabs button:hover {
-        border-bottom: 1px solid;
+        border-top: 2px solid #a0a0a0;
+        border-right: 2px solid #a0a0a0;
+        border-left: 2px solid #a0a0a0;
+      }
+      .tabs button {
+        border-top: 2px solid transparent;
+        border-right: 2px solid transparent;
+        border-left: 2px solid transparent;
+        border-bottom: 2px solid #a0a0a0;
       }
   
   .tabButton{
     border: none;
     cursor: pointer;
-    padding: 30px;
+    padding: 35px;
+    font-weight: 500;
     width: 100%;
-    transition: all 0.15s ease-out;
   }
 
 .text {
     @apply text-5xl font-semibold 
 }
 
-.button {
-    @apply border-[1px] p-4 mt-4 rounded-xl shadow-lg border-black-500  hover:bg-black-900 transition-all hover:text-white font-medium
+.text2 {
+    @apply text-2xl font-semibold 
 }
+
+
+
 
 @media only screen and (max-width: 1200px) {
     .flexbox {
@@ -59,5 +74,11 @@
     }
     .text {
         @apply text-2xl
+    }
+    .text2 {
+        @apply text-sm
+    }
+    .tabButton{
+        padding: 25px;
     }
 }
