--- a/layout/Body_1/styles.module.css
+++ b/layout/Body_1/styles.module.css
@@ -21,34 +21,34 @@
 .tabs {
     display: flex;
     justify-content: space-between;
-  }
-  
-  .tabs button:disabled {
+}
+
+.tabs button:disabled {
     border-top: 1px solid #a0a0a0;
     border-right: 1px solid #a0a0a0;
     border-left: 1px solid #a0a0a0;
     border-bottom: 1px solid transparent;
+    text-decoration: underline;
+    text-decoration-color: #FF6884;
+    text-underline-offset: 40px;
     @apply rounded-t-2xl
+}
 
-  }
+.tabs button {
+    border-top: 1px solid transparent;
+    border-right: 1px solid transparent;
+    border-left: 1px solid transparent;
+    border-bottom: 1px solid #a0a0a0;
+    @apply rounded-t-2xl
+}
 
-  
-      .tabs button {
-        border-top: 1px solid transparent;
-        border-right: 1px solid transparent;
-        border-left: 1px solid transparent;
-        border-bottom: 1px solid #a0a0a0;
-        @apply rounded-t-2xl
-
-      }
-  
-  .tabButton{
+.tabButton{
     border: none;
     cursor: pointer;
     padding: 35px;
     font-weight: 500;
     width: 100%;
-  }
+}
 
 .text {
     @apply text-5xl font-semibold 
@@ -57,9 +57,6 @@
 .text2 {
     @apply text-2xl font-semibold 
 }
-
-
-
 
 @media only screen and (max-width: 1200px) {
     .flexbox {
@@ -79,5 +76,8 @@
     }
     .tabButton{
         padding: 25px;
+    }
+    .tabs button:disabled {
+    text-underline-offset: 25px;
     }
 }
